--- a/src/main/webapp/app/group/group.component.html
+++ b/src/main/webapp/app/group/group.component.html
@@ -9,14 +9,14 @@
         </button>
     </h2>
     <jhi-alert></jhi-alert>
-    <br/>
+    <hr/>
     <div *ngIf="groups">
         <div *ngFor="let group of groups; let i = index; trackBy: trackId">
             <div *ngIf="i % 2 === 0" class="row">
-                <div class="col-lg-6 p-3">
+                <div class="col-lg-6 p-3 p-md-4">
                     <jhi-group-child [group]="group"></jhi-group-child>
                 </div>
-                <div class="col-lg-6 p-3" *ngIf="i !== groups.length - 1">
+                <div class="col-lg-6 p-3 p-md-4" *ngIf="i !== groups.length - 1">
                     <jhi-group-child [group]="groups[i + 1]"></jhi-group-child>
                 </div>
             </div>
