--- a/src/main/webapp/app/board/board-detail.component.html
+++ b/src/main/webapp/app/board/board-detail.component.html
@@ -5,6 +5,10 @@
             <hr>
             <jhi-alert-error></jhi-alert-error>
             <dl class="row-md jh-entity-details">
+                <dt><span>Title</span></dt>
+                <dd>
+                    <span>{{board.title}}</span>
+                </dd>
                 <dt><span jhiTranslate="smartjournalApp.board.name">Name</span></dt>
                 <dd>
                     <span>{{board.name}}</span>
@@ -50,43 +54,3 @@
     </div>
 </div>
 
-<div *ngIf="board">
-    <h2>{{board.name}}</h2>
-    <hr/>
-    <ngb-tabset type="pills">
-        <ngb-tab title="Journal">
-            <ng-template ngbTabContent>
-                <br/>
-                <div class="table-responsive" *ngIf="board.students">
-                    <table class="table table-striped table-bordered">
-                        <thead>
-                        <tr class="text-center">
-                            <th>Student</th>
-                            <th colspan="100%">Scores</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <td></td>
-                            <td *ngFor=" let day of board.students[0].days" class="text-center">
-                                {{day.date | date: 'dd.MM'}}
-                            </td>
-                        </tr>
-                        <tr *ngFor="let student of board.students">
-                            <td>{{student.lastName}} {{student.firstName}}</td>
-                            <td *ngFor="let day of student.days" class="text-center">{{day.result}}</td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </ng-template>
-        </ngb-tab>
-        <ngb-tab title="Tasks">
-            <ng-template ngbTabContent>
-                <br/>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium, ad aspernatur at cumque dolorum ea enim, exercitationem expedita fugit incidunt ipsam itaque pariatur placeat quod repellat tempore unde voluptas?
-            </ng-template>
-        </ngb-tab>
-    </ngb-tabset>
-    <br/>
-</div>
