--- a/src/main/webapp/app/group/student/student.component.html
+++ b/src/main/webapp/app/group/student/student.component.html
@@ -10,6 +10,7 @@
     </h2>
     <jhi-alert></jhi-alert>
     <br/>
+    <div> {{students | json}}</div>
     <div class="table-responsive" *ngIf="students">
         <table class="table table-striped">
             <thead>
