--- a/src/main/webapp/app/subject/subject-detail.component.html
+++ b/src/main/webapp/app/subject/subject-detail.component.html
@@ -1,5 +1,5 @@
 <div class="row justify-content-center">
-    <div class="col-8">
+    <div class="col-md-8">
         <div *ngIf="subject">
             <h2>{{ subject.name }}</h2>
             <hr/>
