--- a/src/main/webapp/app/group/student/student-detail.component.html
+++ b/src/main/webapp/app/group/student/student-detail.component.html
@@ -3,6 +3,7 @@
         <div *ngIf="student">
             <h2><span jhiTranslate="smartjournalApp.student.detail.title">Student</span> {{student.id}}</h2>
             <hr>
+            <jhi-alert></jhi-alert>
             <jhi-alert-error></jhi-alert-error>
             <dl class="row-md jh-entity-details">
                 <dt><span jhiTranslate="smartjournalApp.student.firstName">First Name</span></dt>
