--- a/src/main/webapp/app/subject/subject-detail.component.html
+++ b/src/main/webapp/app/subject/subject-detail.component.html
@@ -3,6 +3,7 @@
         <div *ngIf="subject">
             <h2>{{ subject.name }}</h2>
             <hr/>
+            <jhi-alert></jhi-alert>
             <jhi-alert-error></jhi-alert-error>
             <dl class="row-md jh-entity-details">
                 <dt><span jhiTranslate="smartjournalApp.subject.createdDate">Created</span></dt>
