--- a/src/main/webapp/app/group/group-students/group-students.component.html
+++ b/src/main/webapp/app/group/group-students/group-students.component.html
@@ -1,10 +1,10 @@
-<div *ngIf="students" class="table-responsive">
+<div *ngIf="students.length !== 0; else noGroups" class="table-responsive">
     <table class="table table-striped">
         <thead>
         <tr>
             <th><span jhiTranslate="global.field.id">ID</span></th>
-            <th><span jhiTranslate="smartjournalApp.student.firstName">First Name</span></th>
             <th><span jhiTranslate="smartjournalApp.student.lastName">Last Name</span></th>
+            <th><span jhiTranslate="smartjournalApp.student.firstName">First Name</span></th>
             <th><span jhiTranslate="smartjournalApp.student.middleName">Middle Name</span></th>
             <th></th>
         </tr>
@@ -12,8 +12,8 @@
         <tbody>
         <tr *ngFor="let student of students ;trackBy: trackId">
             <td><a [routerLink]="['/student', student.id, 'view' ]">{{student.id}}</a></td>
-            <td>{{student.firstName}}</td>
             <td>{{student.lastName}}</td>
+            <td>{{student.firstName}}</td>
             <td>{{student.middleName}}</td>
             <td class="text-right">
                 <div class="btn-group flex-btn-group-container">
@@ -37,3 +37,8 @@
         </tbody>
     </table>
 </div>
+<ng-template #noGroups>
+    <div class="alert alert-primary" role="alert">
+        There is no students in this group
+    </div>
+</ng-template>
