--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -267,3 +267,16 @@ ul[role='tablist'] {
     @include mt(3);
     @include mb(3);
 }
+
+//.modal {
+//    &.show .modal-dialog {
+//        transition: 0.25s all;
+//        opacity: 0;
+//        transform: translate(0, 5vh);
+//    }
+//
+//    &.custom-show .modal-dialog {
+//        opacity: 1;
+//        transform: translate(0, 0);
+//    }
+//}
