optimize group components interaction

--- a/src/main/webapp/app/group/group-detail.component.html
+++ b/src/main/webapp/app/group/group-detail.component.html
@@ -27,7 +27,7 @@
                 </ngb-tab>
                 <ngb-tab id="students" title="Students">
                     <ng-template ngbTabContent>
-                        <jhi-group-students [groupId]="group.id"></jhi-group-students>
+                        <jhi-group-students [groupId]="group.id" [students]="group.students"></jhi-group-students>
                     </ng-template>
                 </ngb-tab>
             </ngb-tabset>
