--- a/src/main/webapp/app/board/board-detail.component.html
+++ b/src/main/webapp/app/board/board-detail.component.html
@@ -4,40 +4,19 @@
             <h2><span jhiTranslate="smartjournalApp.board.detail.title">Board</span> {{board.id}}</h2>
             <hr>
             <jhi-alert-error></jhi-alert-error>
-            <dl class="row-md jh-entity-details">
-                <dt><span>Title</span></dt>
-                <dd>
-                    <span>{{board.title}}</span>
-                </dd>
-                <dt><span jhiTranslate="smartjournalApp.board.name">Name</span></dt>
-                <dd>
-                    <span>{{board.name}}</span>
-                </dd>
-                <dt><span jhiTranslate="smartjournalApp.board.description">Description</span></dt>
-                <dd>
-                    <span>{{board.description}}</span>
-                </dd>
-                <dt><span jhiTranslate="smartjournalApp.board.createdDate">Created</span></dt>
-                <dd>
-                    <span>{{board.created}}</span>
-                </dd>
-                <dt><span jhiTranslate="smartjournalApp.board.updatedDate">Updated</span></dt>
-                <dd>
-                    <span>{{board.updated}}</span>
-                </dd>
-                <dt><span jhiTranslate="smartjournalApp.board.group">Group</span></dt>
-                <dd>
-                    <div *ngIf="board.group">
-                        <a [routerLink]="['/group', board.group?.id, 'view']">{{board.group?.id}}</a>
-                    </div>
-                </dd>
-                <dt><span jhiTranslate="smartjournalApp.board.subject">Subject</span></dt>
-                <dd>
-                    <div *ngIf="board.subject">
-                        <a [routerLink]="['/subject', board.subject?.id, 'view']">{{board.subject?.id}}</a>
-                    </div>
-                </dd>
-            </dl>
+
+            <ngb-tabset type="pills" #tabset>
+                <ngb-tab id="journal" title="Journal">
+                    <ng-template ngbTabContent>
+                        <jhi-board-journal [group]="board.group"></jhi-board-journal>
+                    </ng-template>
+                </ngb-tab>
+                <ngb-tab id="tasks" title="Tasks">
+                    <ng-template ngbTabContent>
+                        <jhi-board-tasks [board]="board"></jhi-board-tasks>
+                    </ng-template>
+                </ngb-tab>
+            </ngb-tabset>
 
             <button type="submit"
                     (click)="previousState()"
@@ -53,45 +32,3 @@
         </div>
     </div>
 </div>
-
-<div *ngIf="board">
-    <h2>{{board.name}}</h2>
-    <hr/>
-    <ngb-tabset type="pills">
-        <ngb-tab title="Journal">
-            <ng-template ngbTabContent>
-                <br/>
-                <div class="table-responsive" *ngIf="board.group.students">
-                    <table class="table table-striped table-bordered">
-                        <thead>
-                        <tr class="text-center">
-                            <th>Student</th>
-                            <th colspan="100%">Scores</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <td></td>
-                            <td *ngFor=" let day of board.group.students[0].days" class="text-center">
-                                {{day.date | date: 'dd.MM'}}
-                            </td>
-                        </tr>
-                        <tr *ngFor="let student of board.group.students">
-                            <td>{{student.lastName}} {{student.firstName}}</td>
-                            <td *ngFor="let day of student.days" class="text-center">{{day.result}}</td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </ng-template>
-        </ngb-tab>
-        <ngb-tab title="Tasks">
-            <ng-template ngbTabContent>
-                <br/>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium, ad aspernatur at cumque dolorum ea enim, exercitationem expedita fugit incidunt ipsam itaque pariatur placeat quod repellat tempore unde voluptas?
-            </ng-template>
-        </ngb-tab>
-    </ngb-tabset>
-    <br/>
-</div>
-
