--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -205,7 +205,7 @@ entity detail page css
     }
 }
 
-@import "spacing_minins.scss";
+@import "spacing_mixins.scss";
 
 .jh-entity-details {
     dt {
