--- a/src/main/webapp/app/board/board-journal/board-journal.component.html
+++ b/src/main/webapp/app/board/board-journal/board-journal.component.html
@@ -1,60 +1,4 @@
-<div class="table-responsive" *ngIf="group.students">
-    <table class="table table-striped table-bordered">
-        <thead>
-        <tr class="text-center">
-            <th>Student</th>
-            <th colspan="100%">Scores</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td></td>
-            <td *ngFor=" let day of group.students[0].days" class="text-center">
-                {{day.date | date: 'dd.MM'}}
-            </td>
-        </tr>
-        <tr *ngFor="let student of group.students">
-            <td>{{student.lastName}} {{student.firstName}}</td>
-            <td *ngFor="let day of student.days" class="text-center">{{day.result}}</td>
-        </tr>
-        </tbody>
-    </table>
-</div>
-<form name="editForm" role="form" novalidate (ngSubmit)="save()" #editForm="ngForm">
-    <jhi-alert-error></jhi-alert-error>
-    <div class="table-responsive">
-        <table class="table table-striped table-bordered">
-            <thead>
-            <tr class="text-center">
-                <th>Student</th>
-                <th colspan="100%">Scores</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <td></td>
-                <td *ngFor=" let day of group.students[0].days" class="text-center">
-                    {{day.date | date: 'dd.MM'}}
-                </td>
-            </tr>
-            <tr *ngFor="let student of group.students">
-                <td>{{student.lastName}} {{student.firstName}}</td>
-                <!--<td *ngFor="let day of student.days" contenteditable="true"-->
-                    <!--[(ngModel)]="day.result" [ngModelOptions]="{standalone: true}" ngDefaultControl></td>-->
-                <td *ngFor="let day of student.days" class="text-center" contenteditable="true"
-                    (keyup)="handleKeyup($event, day)">{{day.result}}</td>
-                    <!--<input class="text-center" type="text" id="day-{{day.id}}"-->
-                           <!--name="day-{{day.id}}" [(ngModel)]="day.result">-->
-            </tr>
-            </tbody>
-        </table>
-    </div>
-    <div>
-        <button type="button" id="cancel-save" class="btn btn-secondary"  (click)="previousState()">
-            <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
-        </button>
-        <button type="submit" id="save-entity" [disabled]="!formValid" class="btn btn-primary">
-            <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.save">Save</span>
-        </button>
-    </div>
-</form>
+<jhi-journal-detail *ngIf="!isEditing; else journalUpdate" [students]="group.students"></jhi-journal-detail>
+<ng-template #journalUpdate>
+    <jhi-journal-update [students]="group.students"></jhi-journal-update>
+</ng-template>
