--- a/src/main/webapp/content/css/loading.css
+++ b/src/main/webapp/content/css/loading.css
@@ -113,7 +113,7 @@
     width: 120px;
     height: 60px;
     border-radius: 120px 120px 0 0;
-    background: #bbcedd;
+    background: #007bff;
     -webkit-animation: lds-pacman-1 1s linear infinite;
     animation: lds-pacman-1 1s linear infinite;
     -webkit-transform-origin: 60px 60px;
@@ -130,7 +130,7 @@
     width: 24px;
     height: 24px;
     border-radius: 50%;
-    background-image: url('../images/hipster192.png');
+    background-image: url('../images/open_book.png');
     background-size: contain;
     -webkit-animation: lds-pacman-3 1s linear infinite;
     animation: lds-pacman-3 1.5s linear infinite;
