add board creation with days generation

--- a/src/main/webapp/app/board/board-detail.component.html
+++ b/src/main/webapp/app/board/board-detail.component.html
@@ -13,6 +13,7 @@
                 </span>
             </h2>
             <hr/>
+            <jhi-alert></jhi-alert>
             <jhi-alert-error></jhi-alert-error>
 
             <ngb-tabset type="pills" #tabset>
