--- a/src/main/webapp/app/board/board-update.component.html
+++ b/src/main/webapp/app/board/board-update.component.html
@@ -45,8 +45,65 @@
                         <option [ngValue]="subjectOption.id === board.subject?.id ? board.subject : subjectOption" *ngFor="let subjectOption of subjects; trackBy: trackSubjectById">{{subjectOption.id}}</option>
                     </select>
                 </div>
+                <div class="form-group">
+                    <label class="form-control-label" for="dateFrom">Date from</label>
+                    <div class="input-group">
+                        <input class="form-control" id="dateFrom" placeholder="yyyy-mm-dd"
+                               name="dateFrom" [(ngModel)]="dateFrom" ngbDatepicker #dateFromPicker="ngbDatepicker">
+                        <div class="input-group-append">
+                            <button class="btn btn-outline-secondary calendar" (click)="dateFromPicker.toggle()" type="button"></button>
+                        </div>
+                    </div>
+                </div>
+                <div>{{dateFrom}}</div>
+                <div class="form-group">
+                    <label class="form-control-label" for="dateTo">Date from</label>
+                    <div class="input-group">
+                        <input class="form-control" id="dateTo" placeholder="yyyy-mm-dd"
+                               name="dateTo" [(ngModel)]="dateTo" ngbDatepicker #dateToPicker="ngbDatepicker">
+                        <div class="input-group-append">
+                            <button class="btn btn-outline-secondary calendar" (click)="dateToPicker.toggle()" type="button"></button>
+                        </div>
+                    </div>
+                </div>
+                <div>{{dateTo}}</div>
+                <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" name="1" id="monday"
+                           (change)="updateDayOfWeek($event.target)">
+                    <label class="custom-control-label" for="monday">Monday</label>
+                </div>
+                <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" name="2" id="tuesday"
+                           (change)="updateDayOfWeek($event.target)">
+                    <label class="custom-control-label" for="tuesday">Tuesday</label>
+                </div>
+                <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" name="3" id="wednesday"
+                           (change)="updateDayOfWeek($event.target)">
+                    <label class="custom-control-label" for="wednesday">Wednesday</label>
+                </div>
+                <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" name="4" id="thursday"
+                           (change)="updateDayOfWeek($event.target)">
+                    <label class="custom-control-label" for="thursday">Thursday</label>
+                </div>
+                <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" name="5" id="friday"
+                           (change)="updateDayOfWeek($event.target)">
+                    <label class="custom-control-label" for="friday">Friday</label>
+                </div>
+                <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" name="6" id="saturday"
+                           (change)="updateDayOfWeek($event.target)">
+                    <label class="custom-control-label" for="saturday">Saturday</label>
+                </div>
+                <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" name="7" id="sunday"
+                           (change)="updateDayOfWeek($event.target)">
+                    <label class="custom-control-label" for="sunday">Sunday</label>
+                </div>
             </div>
-            <div>
+            <div class="mt-3">
                 <button type="button" id="cancel-save" class="btn btn-secondary"  (click)="previousState()">
                     <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
                 </button>
