--- a/src/main/webapp/app/board/board-update.component.html
+++ b/src/main/webapp/app/board/board-update.component.html
@@ -12,7 +12,7 @@
                 <div class="form-group">
                     <label for="field_title">Title</label>
                     <input type="text" class="form-control" id="field_title" name="title"
-                           [value]="board.group?.name + '. ' + board.subject?.name" readonly />
+                           [value]="(board.group ? board.group?.name : '') + '. ' + (board.subject ? board.subject?.name : '')" readonly />
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="smartjournalApp.board.name" for="field_name">Name</label>
@@ -32,18 +32,32 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="smartjournalApp.board.group" for="field_party">Party</label>
-                    <select class="form-control" id="field_party" name="group" [(ngModel)]="board.group">
+                    <label class="form-control-label" jhiTranslate="smartjournalApp.board.group" for="field_group">Party</label>
+                    <select class="form-control" id="field_group" name="group" [(ngModel)]="board.group"
+                            required>
                         <option [ngValue]="null"></option>
-                        <option [ngValue]="partyOption.id === board.group?.id ? board.group : partyOption" *ngFor="let partyOption of groups; trackBy: trackGroupById">{{partyOption.id}}</option>
+                        <option [ngValue]="groupOption.id === board.group?.id ? board.group : groupOption" *ngFor="let groupOption of groups; trackBy: trackGroupById">{{groupOption.id}}</option>
                     </select>
+                    <div [hidden]="!(editForm.controls.group?.dirty && editForm.controls.name?.invalid)">
+                        <small class="form-text text-danger"
+                               [hidden]="!editForm.controls.group?.errors?.required" jhiTranslate="entity.validation.required" email>
+                            This field is required.
+                        </small>
+                    </div>
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="smartjournalApp.board.subject" for="field_subject">Subject</label>
-                    <select class="form-control" id="field_subject" name="subject" [(ngModel)]="board.subject">
+                    <select class="form-control" id="field_subject" name="subject" [(ngModel)]="board.subject"
+                            required>
                         <option [ngValue]="null"></option>
                         <option [ngValue]="subjectOption.id === board.subject?.id ? board.subject : subjectOption" *ngFor="let subjectOption of subjects; trackBy: trackSubjectById">{{subjectOption.id}}</option>
                     </select>
+                    <div [hidden]="!(editForm.controls.subject?.dirty && editForm.controls.name?.invalid)">
+                        <small class="form-text text-danger"
+                               [hidden]="!editForm.controls.subject?.errors?.required" jhiTranslate="entity.validation.required">
+                            This field is required.
+                        </small>
+                    </div>
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" for="dateFrom">Date from</label>
@@ -51,7 +65,9 @@
                         <input class="form-control" id="dateFrom" placeholder="yyyy-mm-dd"
                                name="dateFrom" [(ngModel)]="dateFrom" ngbDatepicker #dateFromPicker="ngbDatepicker">
                         <div class="input-group-append">
-                            <button class="btn btn-outline-secondary calendar" (click)="dateFromPicker.toggle()" type="button"></button>
+                            <button class="btn btn-outline-secondary" (click)="dateFromPicker.toggle()" type="button">
+                                <i class="far fa-calendar-alt"></i>
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -62,7 +78,9 @@
                         <input class="form-control" id="dateTo" placeholder="yyyy-mm-dd"
                                name="dateTo" [(ngModel)]="dateTo" ngbDatepicker #dateToPicker="ngbDatepicker">
                         <div class="input-group-append">
-                            <button class="btn btn-outline-secondary calendar" (click)="dateToPicker.toggle()" type="button"></button>
+                            <button class="btn btn-outline-secondary" (click)="dateToPicker.toggle()" type="button">
+                                <i class="far fa-calendar-alt"></i>
+                            </button>
                         </div>
                     </div>
                 </div>
